add tabular data about our pets

--- a/pet-page.html
+++ b/pet-page.html
@@ -18,5 +18,44 @@
         <li>Cheeto (given away)</li>
         <li>Bowser (deceased)</li>
       </ul>
+
+    <table>
+      <tr>
+        <th>Pet Name</th>
+        <th>Species</th>
+        <th>Color</th>
+        <th>Owner</th>
+      </tr>
+      <tr>
+        <td>Bento</td>
+        <td>Dog</td>
+        <td>Brown</td>
+        <td>Tony</td>
+      </tr>
+      <tr>
+        <td>Jordan</td>
+        <td>Cat</td>
+        <td>Black</td>
+        <td>Wolfgang</td>
+      </tr>
+      <tr>
+        <td>Frisky</td>
+        <td>Cat</td>
+        <td>Light orange</td>
+        <td>Wolfgang</td>
+      </tr>
+      <tr>
+        <td>Cheeto</td>
+        <td>Cat</td>
+        <td>Dark orange</td>
+        <td>Wolfgang</td>
+      </tr>
+      <tr>
+        <td>Bowser</td>
+        <td>Dog</td>
+        <td>Grey</td>
+        <td>Wolfgang</td>
+      </tr>
+    </table>
     </body>
 </html>
