add links, linear semantics, and an image of a pet cemetery

--- a/pet-page.html
+++ b/pet-page.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <h1>Pet Page</h1>
-    <h2>Everything you ever wanted to know about our pets</h2>
+    <h2><em>Everything</em> you ever wanted to know about
+      our <a href="http://www.petco.com"><strong>pets</strong></a>!</h2>
 
     <h3>Tony's Pet(s)</h3>
       <ul>
@@ -13,16 +14,18 @@
       </ul>
     <h3>Wolfgang's Pet(s)</h3>
       <ul>
-        <li>Jordan (deceased)</li>
-        <li>Frisky (given away)</li>
-        <li>Cheeto (given away)</li>
-        <li>Bowser (deceased)</li>
+        <li>Jordan (<em>deceased</em>)</li>
+        <li>Frisky (<strong>given away</strong>)</li>
+        <li>Cheeto (<strong>given away</strong>)</li>
+        <li>Bowser (<em>deceased</em>)</li>
       </ul>
+
+  <img src="pet-cemetery.png" alt="A picture of a pet cemetery from the Simpsons">
 
     <table>
       <tr>
         <th>Pet Name</th>
-        <th>Species</th>
+        <th><a href="https://en.wikipedia.org/wiki/Species">Species</a></th>
         <th>Color</th>
         <th>Owner</th>
       </tr>
