add CSS style and ID selectors

--- a/pet-page.html
+++ b/pet-page.html
@@ -2,24 +2,27 @@
 <html>
   <head>
     <title>PET PAGE</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Pet Page</h1>
     <h2><em>Everything</em> you ever wanted to know about
       our <a href="http://www.petco.com"><strong>pets</strong></a>!</h2>
-
-    <h3>Tony's Pet(s)</h3>
-      <ul>
-        <li>Bento</li>
-      </ul>
-    <h3>Wolfgang's Pet(s)</h3>
-      <ul>
-        <li>Jordan (<em>deceased</em>)</li>
-        <li>Frisky (<strong>given away</strong>)</li>
-        <li>Cheeto (<strong>given away</strong>)</li>
-        <li>Bowser (<em>deceased</em>)</li>
-      </ul>
-
+    <div id="tonys">
+      <h3>Tony's Pet(s)</h3>
+        <ul>
+          <li>Bento</li>
+        </ul>
+    </div>
+    <div id="wolfgangs">
+      <h3>Wolfgang's Pet(s)</h3>
+        <ul>
+          <li>Jordan (<em>deceased</em>)</li>
+          <li>Frisky (<strong>given away</strong>)</li>
+          <li>Cheeto (<strong>given away</strong>)</li>
+          <li>Bowser (<em>deceased</em>)</li>
+        </ul>
+    </div>
   <img src="pet-cemetery.png" alt="A picture of a pet cemetery from the Simpsons">
 
     <table>
